--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "bootstrap-icons": "^1.9.1",
     "esbuild-rails": "^1.0.3",
     "jquery": "^3.6.0",
+    "ngrok": "^4.3.1",
     "sass": "^1.54.0"
   },
   "scripts": {
